BUG-2661: Sonar issue
- solving technical depth

Change-Id: Ic9b92f38d4aa52f091c84648da009e482b3eb101
Signed-off-by: Timotej Kubas <tkubas@cisco.com>